styles added: news, articles, pics, promo

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <div class='header__banner'></div>
             <nav class='header__nav'>
                 <ul class='nav-bulleted'>
-                    <li class='nav-bulleted__link nav-bulleted__link_active topic-navlinks'><a href='https://womenbz.ru/'
-                            class='topic-navlinks__link'>Журнал</a></li>
+                    <a class='link-white' href='#'>
+                        <li class='nav-bulleted__link nav-bulleted__link_active'>Журнал</li>
+                    </a>
                 </ul>
                 <div class='nav-projects'>
                     <div class='nav-projects__logo'></div>
@@ -28,7 +29,7 @@
                     </div>
                     <div class='nav-projects__searchbox'>
                         <input class='search' type='text' autocomplete placeholder='Поиск'></input>
-                        <img class='search__icon' src='../assets/search.png' />
+                        <img class='search__icon' src='/assets/search.png' />
                     </div>
                 </div>
             </nav>
@@ -38,66 +39,223 @@
             <section class='articles'>
                 <article class='articles__item articles__item-Xlarge article'>
                     <div class='article__pic article__pic-Xlarge pic-block'>
-                        <img class='pic-block__img' src='' alt='' />
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_square_big/1308.jpg'
+                            alt='' />
                         <div class='pic-block__heading'>
-                            <span class='heading-Xlarge'>12 книг, которые помогут достичь целей в этом году</span>
-                            <span class='heading-medium'>Подборка от
-                                девушек-предпринимателей
+                            <span class='heading-Xlarge'>Закрыть бизнес, чтобы стать счастливой</span>
+                            <span class='heading-medium'>Медиаменеджер и блогер Елена Володина о том, почему не стоит
+                                пытаться
+                                заработать на хобби
                             </span>
                         </div>
 
                         <div class='pic-block__txt stat'>
-                            <img class='stat__icon' src='../assets/eye.png' alt='' />
-                            <div class='stat__txt'>2705</div>
-                            <img class='stat__icon' src='../assets/clock.png' alt='' />
-                            <div class='stat__txt'>11 мин</div>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>2389</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>19 мин</div>
                         </div>
                     </div>
                 </article>
-                <aside class='articles__item news'>
+                <aside class='articles__item articles__item-medium news'>
                     <h2 class='news__block news__block-heading heading-medium link-blue'>новости</h2>
+
                     <div class='news__block block'>
                         <div class='block__txt'>
-                            <a class='font-base font-bold link-blue'>Гендерный разрыв в зарплатах должен исчезнуть
-                                через 202 года</a>
-                            <p class='font-base'>Такие данные были представлены в докладе Всемирного экономического
-                                форума.</p>
+                            <div class='font-base font-bold'><a class='link-blue'>Число ежедневных просмотров «историй»
+                                    в Instagram достигло 500 миллионов</a>
+                                <div class='font-base'>Такие данные приводятся в финансовом отчете Facebook за
+                                    четвертый квартал 2018 года.</div>
+                            </div>
+                        </div>
+                        <div class='block__time'>Вчера в 11:31</div>
+                    </div>
+                    <div class='news__block block'>
+                        <div class='block__txt'>
+                            <div class='font-base font-bold'><a class='link-blue'>Гендерный разрыв в зарплатах должен
+                                    исчезнуть
+                                    через 202 года</a>
+                                <div class='font-base'>Такие данные были представлены в докладе Всемирного
+                                    экономического
+                                    форума.</div>
+                            </div>
                         </div>
                         <div class='block__time'>месяц назад</div>
                     </div>
-                    <div class='news__block block'></div>
-                    <div class='news__block block'></div>
-                    <div class='news__block block'></div>
+                    <div class='news__block block'>
+                        <div class='block__txt'>
+                            <div class='font-base font-bold'><a class='link-blue'>Две девушки из России вошли в рейтинг
+                                    самых успешных предпринимателей до 30 лет по версии Forbes</a>
+                                <div class='font-base'>Всего в списке — трое россиян.</div>
+                            </div>
+                        </div>
+                        <div class='block__time'>2 месяца назад</div>
+                    </div>
+                    <div class='news__block block'>
+                        <div class='block__txt'>
+                            <div class='font-base font-bold'><a class='link-blue'>Новый курс на платформе The Balance и
+                                    возможность удвоить срок подписки</a>
+                                <div class='font-base'>Предприниматель Евгения Мальцева подготовила курс о том, как
+                                    разморозить свой потенциал.</div>
+                            </div>
+                        </div>
+                        <div class='block__time'>2 месяца назад</div>
+                    </div>
                 </aside>
                 <article class='articles__item articles__item-medium article'>
                     <div class='article__pic article__pic-medium pic-block'>
-                        <img class='pic-block__img' src='' alt='' />
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_wide/154.jpg' alt='' />
                         <div class='pic-block__txt stat'>
-                            <img class='stat__icon' src='../assets/eye.png' alt='' />
-                            <div class='stat__txt'>5274</div>
-                            <img class='stat__icon' src='../assets/clock.png' alt='' />
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>3020</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>11 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>жизнь</div>
+                    <h3 class='article__heading'>12 книг, которые помогут достичь целей в этом году</h3>
+                    <div class='article__lead font-base'>Подборка от девушек-предпринимателей</div>
+                </article>
+                <article class='articles__item articles__item-small article'>
+                    <div class='article__pic article__pic-small pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_square_small/30.jpg'
+                            alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>5680</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
                             <div class='stat__txt'>30 мин</div>
                         </div>
                     </div>
-                    <div class='article__projectname'>ЛЮДИ</div>
-                    <div class='article__heading'>Бизнес по-женски</div>
-                    <div class='article__lead font-base'>Интервью со Златоцветой Петровой — основателем невероятно
-                        красивой и необычной студии, где шьют одежду</div>
+                    <div class='article__projectname'>люди</div>
+                    <h3 class='article__heading'>Бизнес по-женски</h3>
+                    <div class='article__lead font-base'>Интервью со Златоцветой Петровой &mdash основателем <span class='blur'>невероятно
+                            красивой и необычной студии</span></div>
                 </article>
-                <article class='articles__item articles__item-small article'></article>
-                <article class='articles__item articles__item-large article'></article>
-                <article class='articles__item articles__item-small article'></article>
-                <article class='articles__item articles__item-small article'></article>
-                <article class='articles__item articles__item-medium article'></article>
-                <article class='articles__item articles__item-small article'></article>
+                <article class='articles__item articles__item-large article'>
+                    <div class='backgr-js'>
+                    </div>
+                </article>
+                <article class='articles__item articles__item-small article'>
+                    <div class='article__pic article__pic-small pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_square_small/642.jpg'
+                            alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>197757</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>9 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>бизнес</div>
+                    <h3 class='article__heading'>Как оформить профиль в Инстаграм</h3>
+                    <div class='article__lead font-base'>Чтобы вас легко находили в поиске, подписывались <span class='blur'>на
+                            аккаунт и становились клиентами </span></div>
+                </article>
+                <article class='articles__item articles__item-small article'>
+                    <div class='article__pic article__pic-small pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_square_small/594.jpg'
+                            alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>184989</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>24 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>жизнь</div>
+                    <h3 class='article__heading'>Как сделать карту желаний и исполнить<span class='blur'>свои мечты</span></h3>
+                    <div class='article__lead font-base'>«Подтянуть» здоровье, семью, бизнес, путешествия<span class='blur'>&mdash
+                            и еще 5 секторов для счастья</span></div>
+                </article>
+                <article class='articles__item articles__item-medium article'>
+                    <div class='article__pic article__pic-medium pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_wide/1239.jpg' alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>50387</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>6 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>бизнес</div>
+                    <h3 class='article__heading'>Как использовать пресеты для фото в Инстаграм</h3>
+                    <div class='article__lead font-base'>Чтобы упростить процесс обработки и оформить профиль в едином
+                        стиле</div>
+                </article>
+                <article class='articles__item articles__item-small article'>
+                    <div class='article__pic article__pic-small pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_square_small/287.jpg'
+                            alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>48354</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>11 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>бизнес</div>
+                    <h3 class='article__heading'>Почта России или транспортная ком<span class='blur'>пания</span></h3>
+                    <div class='article__lead font-base'>Сравниваем сервисы доставки: по срокам, тарифам<span class='blur'>
+                            и сохранности посылок</span></div>
+                </article>
+            </section>
+            <section class='articles'>
+                <article class='articles__item articles__item-medium article'>
+                    <div class='article__pic article__pic-medium pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/preview/preview_wide/1275.jpg' alt='' />
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>9900</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>19 мин</div>
+                        </div>
+                    </div>
+                    <div class='article__projectname'>бизнес</div>
+                    <h3 class='article__heading'>Как сделать Инстаграм красивым: кейс для новичков</h3>
+                    <div class='article__lead font-base'>Редактор Womenbz провела эксперимент по преображению своего
+                        профиля в Инстаграм</div>
+                </article>
             </section>
             <section class='articles border-bottom'>
-                <article class='articles__item articles__item-medium article'></article>
-                <article class='articles__item articles__item-special promo'></article>
+                <article class='articles__item articles__item-Xlarge promo'>
+                    <div class='promo__header'>
+                        <h1 class='font-bold heading-large'>Старт бизнеса</h1>
+                        <h2 class='heading-medium'>Подборка статей для тех, кто хочет,<br>
+                            но все еще не начал свой бизнес</h2>
+                    </div>
+                    <div class='promo__links'>
+                        <a href='https://womenbz.ru/articles/kak-perestat-boyatsya-i-otkryt-svoe-delo/' class='link-blue font-base font-bold promo-link'>Как
+                            перестать бояться</a>
+                        <a href='https://womenbz.ru/articles/potolok-zarabotka/' class='link-blue font-base font-bold promo-link border'>Что
+                            делать, если ваш доход
+                            не растет</a>
+                        <a href='https://womenbz.ru/articles/kak-sdvinutsya-s-mertvoy-tochki/' class='link-blue font-base font-bold promo-link border'>Как
+                            начать действовать</a>
+                    </div>
+                </article>
             </section>
             <section class='articles border-bottom highlighted'>
-                <h1 class='articles__heading heading-large'>Истории успеха</h1>
-                <article class='articles__item articles__item-2Xlarge article'></article>
+                <h1 class='articles__heading font-bold heading-large'>Истории успеха</h1>
+                <article class='articles__item articles__item-2Xlarge article'>
+                    <div class='article__pic article__pic-2Xlarge pic-block'>
+                        <img class='pic-block__img' src='https://womenbz.ru/static/article_cover/cover_small/47.jpg'
+                            alt='' />
+                        <div class='pic-block__heading'>
+                            <span class='heading-Xlarge'>Бизнес по-женски</span>
+                            <span class='heading-medium'>Интервью со Златоцветой Петровой&mdashоснователем невероятно красивой
+                                и необычной студии, где шьют одежду.                        
+                            </span>
+                        </div>
+                        <div class='pic-block__txt stat'>
+                            <img class='stat__icon' src=/eye.png' alt='' />
+                            <div class='stat__txt'>5744</div>
+                            <img class='stat__icon' src=/clock.png' alt='' />
+                            <div class='stat__txt'>30 мин</div>
+                        </div>
+
+                    </div>                   
+                </article>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-small article'></article>
@@ -111,7 +269,7 @@
                 <div class='articles__more link-blue'>Смотреть еще</div>
             </section>
             <section class='articles'>
-                <h1 class='articles__heading heading-large'>Бизнес</h1>
+                <h1 class='articles__heading font-bold heading-large'>Бизнес</h1>
                 <article class='articles__item articles__item-medium article'></article>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-large article'></article>
@@ -131,7 +289,7 @@
                 <div class='articles__more link-blue'>Смотреть еще</div>
             </section>
             <section class='articles'>
-                <h1 class='articles__heading heading-large'>Жизнь</h1>
+                <h1 class='articles__heading font-bold heading-large'>Жизнь</h1>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-small article'></article>
                 <article class='articles__item articles__item-medium article'></article>
@@ -168,4 +326,5 @@
         </footer>
 
     </div>
+    <script src="./src/main.js"></script>
 </body>
